--- a/index.html
+++ b/index.html
@@ -494,6 +494,12 @@
 			crossorigin="anonymous"></script>
 
 		</script>
-	
+		<script>
+			AOS.init({
+				startEvent: 'DOMContentLoaded',
+				offset: 200,
+				once: true,
+			});
+		</script>
 	</body>
 </html>
