--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
 			crossorigin="anonymous"></script>
 
 		</script>
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script>
 			AOS.init({
 				startEvent: 'DOMContentLoaded',
